# metamarket-diploma-project

./: .gitignore  README.md  docker-compose.yml
backend_fastapi/: .env.example  Dockerfile  pyproject.toml
backend_fastapi/alembic/versions/: 07709f6f410a_02_refresh_token.py  496ea733cbdd_01_init.py  58870b114124_05_refresh_token_user_unique_constraint.py  610fbd5699f7_06_refresh_token_max_len.py  6f351e7ddf79_001_role_seeds.py  79faca7abbc5_04_refresh_token_user_unique.py  93f18e10d04b_07_cart_item.py  da045ddf9159_03_products.py  f987933035df_08_orders_products_associations.py
backend_fastapi/src/: main.py
backend_fastapi/src/api/: __init__.py
backend_fastapi/src/api/v1/: auth.py  cart_item.py  order.py  product.py  product_category.py  product_review.py  user.py
backend_fastapi/src/auth/: auth.py
backend_fastapi/src/core/: config.py
backend_fastapi/src/db/: db.py
backend_fastapi/src/models/: __init__.py  cart_item.py  order.py  order_product_association.py  product.py  product_category.py  product_review.py  refresh_token.py  role.py  user.py
backend_fastapi/src/schemas/: cart_item.py  order.py  product.py  product_category.py  product_review.py  token.py  user.py
backend_fastapi/src/services/: auth.py  cart_item.py  order.py  product.py  product_category.py  product_review.py  role.py  user.py
client/: .env.development  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
client/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  card.tsx  index.tsx  profile.tsx
(+159 files in other folders)
